--- a/retro_calculator/Base.lproj/LaunchScreen.storyboard
+++ b/retro_calculator/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,8 +16,54 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchbg" translatesAutoresizingMaskIntoConstraints="NO" id="bY0-dR-Fzx">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="87q-DF-R7L">
+                                <rect key="frame" x="3" y="0.0" width="600" height="600"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8JD-mv-cDd">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="111"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="245" verticalHuggingPriority="251" verticalCompressionResistancePriority="850" image="Retro-Calc" translatesAutoresizingMaskIntoConstraints="NO" id="k5Z-Cu-nUY">
+                                                <rect key="frame" x="0.0" y="0.0" width="600" height="111"/>
+                                            </imageView>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A6A-Gn-NsR">
+                                        <rect key="frame" x="0.0" y="111" width="600" height="351"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="780" image="robot" translatesAutoresizingMaskIntoConstraints="NO" id="u2Y-hD-HJd">
+                                                <rect key="frame" x="0.0" y="0.0" width="600" height="351"/>
+                                            </imageView>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rrq-Og-oIR">
+                                        <rect key="frame" x="0.0" y="462" width="600" height="138"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchground" translatesAutoresizingMaskIntoConstraints="NO" id="WOe-as-D6Z">
+                                                <rect key="frame" x="0.0" y="0.0" width="600" height="138"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="138" id="3Wk-0W-dRr"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="bY0-dR-Fzx" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="3i4-gT-UkL"/>
+                            <constraint firstAttribute="trailing" secondItem="87q-DF-R7L" secondAttribute="trailing" id="4TM-0b-on5"/>
+                            <constraint firstItem="87q-DF-R7L" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="4lx-00-rLW"/>
+                            <constraint firstItem="bY0-dR-Fzx" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="5O4-yF-Xov"/>
+                            <constraint firstAttribute="trailing" secondItem="bY0-dR-Fzx" secondAttribute="trailing" id="5bb-va-FNc"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="bY0-dR-Fzx" secondAttribute="bottom" id="Fnc-E7-iF7"/>
+                            <constraint firstAttribute="bottom" secondItem="87q-DF-R7L" secondAttribute="bottom" id="MT7-W7-eg8"/>
+                            <constraint firstItem="87q-DF-R7L" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="wim-gg-jOl"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +71,10 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Retro-Calc" width="755" height="111"/>
+        <image name="launchbg" width="1433" height="957"/>
+        <image name="launchground" width="999" height="225"/>
+        <image name="robot" width="786" height="402"/>
+    </resources>
 </document>
